--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -122,16 +122,10 @@
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
         <li><a href="#auto-audit-aspect">Auto-audit aspect</a></li>
         <li><a href="#auto-audit-example">&nbsp; &nbsp; Auto-audit example with MongoDB</a></li>
-        <li><a href="#jpa-transaction-manager-integration">JPA Transaction Manager integration</a></li>
-        <li><a href="#spring-jpa-example">&nbsp; &nbsp; Spring JPA example</a></li>
-    </ul>
-</section>
-
-<section>
-    <a {% if currentSubPage == 'hibernate-integration' %}class='active'{% endif %} href="/documentation/hibernate-integration">
-    Hibernate integration</a>
-    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'hibernate-integration' %} hidden {% endif %}">
-        <li><a href="#hibernate-unproxy-hook">Hibernate Unproxy Hook</a></li>
+        <li><a href="#jpa-entity-manager-integration">JPA EntityManager integration</a></li>
+        <li><a href="#spring-configuration-for-transactional-javers">&nbsp; &nbsp;Spring configuration for SQL</a></li>
+        <li><a href="#spring-jpa-example">&nbsp; &nbsp;Spring JPA Hibernate example</a></li>
+        <li><a href="#hibernate-unproxy-hook">&nbsp; &nbsp;Hibernate unproxy hook</a></li>
     </ul>
 </section>
 
