--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="{{ page.description }}">
 <meta name="author" content="">
-<title>{{ page.title }}</title>
+<title>{{ page.title }}{{titleSuffix}}</title>
 <link rel="icon" href="favicon.ico">
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 <link href="/css/style.css" rel="stylesheet">
