--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -14,6 +14,11 @@
                 <meta itemprop="datePublished" content="2015-08-27T00:00:00+00:00"/>
                 <meta itemprop="image" content="{{ site.url }}/img/logotype.png">
 
+                <meta itemprop="author" itemscope itemtype="http://schema.org/Person">
+                    <meta itemprop="name" content="Bartosz Walacik"/>
+                    <meta itemprop="email" content="bartek@javers.org"/>
+                </meta>
+
                 <h1 itemprop="headline">{{ page.title }}</h1>
 
                 <div itemprop="articleBody">
