--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -7,15 +7,17 @@
 <body class="page" data-spy="scroll" data-target="#sidebar">
 {% include menus.html %}
 
-<section itemprop="author" itemscope itemtype="http://schema.org/Person">
-    <meta itemprop="name" content="Bartosz Walacik"/>
-    <meta itemprop="email" content="bartek@javers.org"/>
-
+<section >
     <div id="content" class="container">
         <div class="row">
             <div id="main" class="col-md-8" itemscope itemtype="http://schema.org/TechArticle">
                 <meta itemprop="datePublished" content="2015-08-27T00:00:00+00:00"/>
                 <meta itemprop="image" content="{{ site.url }}/img/logotype.png">
+
+                <div itemprop="author" itemscope itemtype="http://schema.org/Person">
+                    <meta itemprop="name" content="Bartosz Walacik"/>
+                    <meta itemprop="email" content="bartek@javers.org"/>
+                </div>
 
                 <h1 itemprop="headline">{{ page.title }}</h1>
 
