--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -19,7 +19,7 @@
                     <meta itemprop="email" content="bartek@javers.org"/>
                 </div>
 
-                <h1 itemprop="headline">{{ page.title }} — JaVers Documentation</h1>
+                <h1 itemprop="headline">{{ page.title }}</h1>
 
                 <div itemprop="articleBody">
                 {{ content }}
