--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -11,8 +11,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="url">
-                <img alt="JaVers logo" src="/img/logotype.png" itemprop="title"/>
+            <a class="navbar-brand" href="/">
+                <img alt="JaVers logo" src="/img/logotype.png"/>
             </a>
             <a class="logo-version" href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar" >
                 {{site.javers_current_version}}
