--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ code {
 }
 
 .hero-container {
-    background: #1a1f25 url(../img/beans.jpg) center center repeat-x;
+    background: #1a1f25 url(../img/beans_c.jpg) center center repeat-x;
 }
 
 .hero {
