--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,9 @@
 <meta name="author" content="">
 <title>{{ page.title }}{{titleSuffix}}</title>
 <link rel="icon" href="favicon.ico">
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
 <link href="/css/style.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet'
       type='text/css'>
