--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -43,6 +43,7 @@
         <li><a href="#compare-entities">Compare Entities</a></li>
         <li><a href="#compare-valueobjects">Compare Value Objects</a></li>
         <li><a href="#compare-graphs">Compare graphs</a></li>
+        <li><a href="#compare-collections">Compare top-level collections</a></li>
     </ul>
 </section>
 
