logotype in svg and favicon added

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ code {
     color: white;
 }
 
+.navbar-javers .navbar-brand img {
+    height: 28px;
+}
+
 .logo-version:active {
    color:black;
 }
