--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
 <meta name="author" content="">
 <title>{{ page.title }}{{titleSuffix}}</title>
 <link rel="icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
