--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img alt="JaVers logo" src="/img/logotype.png"/>
+                <img alt="JaVers logo" src="/img/logotype.svg"/>
             </a>
             <a class="logo-version" href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar" >
                 {{site.javers_current_version}}
