--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <link href="/css/style.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet'
@@ -16,6 +17,7 @@
 
 <!-- github style syntax highlight -->
 <link href="/css/github_pygments.css" rel="stylesheet">
+<link href="/css/octicons.css" rel="stylesheet">
 
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
