--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -138,8 +138,8 @@
     <a {% if currentSubPage == 'spring-boot-integration' %}class='active'{% endif %} href="/documentation/spring-boot-integration">
     Spring Boot integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-boot-integration' %} hidden {% endif %}">
-        <li><a href="#javers-configuration-properties">Javers configuration</a></li>
-        <li><a href="#mongodb-auto-configuration">MongoDB configuration</a></li>
+        <li><a href="#javers-configuration-properties">JaVers configuration</a></li>
+        <li><a href="#mongodb-auto-configuration">MongoDB auto-configuration</a></li>
     </ul>
 </section>
 
