--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -37,6 +37,7 @@
                         <li><a href="/documentation/repository-configuration">Configuration &mdash; Repository</a></li>
                         <li><a href="/documentation/diff-configuration">Configuration &mdash; Diff</a></li>
                         <li><a href="/documentation/spring-integration">Spring integration</a></li>
+                        <li><a href="/documentation/spring-boot-integration">Spring Boot integration</a></li>
                         <li><a href="/documentation/javers-internals">JaVers internals</a></li>
                     </ul>
                 </li>
