JQL skip filter documentation

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -72,6 +72,7 @@
         <li><a href="#query-filters">Query filters</a></li>
         <li><a href="#property-filter">&nbsp; &nbsp; Property</a></li>
         <li><a href="#limit-filter">&nbsp; &nbsp; Limit</a></li>
+        <li><a href="#skip-filter">&nbsp; &nbsp; Skip</a></li>
         <li><a href="#commit-date-filter">&nbsp; &nbsp; CommitDate</a></li>
         <li><a href="#new-object-filter">&nbsp; &nbsp; NewObject changes</a></li>
 
