--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -138,9 +138,14 @@
     <a {% if currentSubPage == 'spring-boot-integration' %}class='active'{% endif %} href="/documentation/spring-boot-integration">
     Spring Boot integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-boot-integration' %} hidden {% endif %}">
-        <li><a href="#javers-configuration-properties">JaVers configuration</a></li>
-        <li><a href="#mongodb-auto-configuration">MongoDB auto-configuration</a></li>
+        <li><a href="#get-javers-starters">Get JaVers starter</a></li>
+        <li><a href="#javers-configuration-properties">JaVers Core configuration</a></li>
+        <li><a href="#starters-auto-configuration">Spring AutoConfiguration</a></li>
+        <li><a href="#starter-repository-configuration">JaVersRepository configuration</a></li>
+        <li><a href="#starter-boot">Boot it!</a></li>
+        <li><a href="#starter-demo-app">Demo application</a></li>
     </ul>
+
 </section>
 
 <section>
