JQL commit id filter documentation

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -74,6 +74,7 @@
         <li><a href="#limit-filter">&nbsp; &nbsp; Limit</a></li>
         <li><a href="#skip-filter">&nbsp; &nbsp; Skip</a></li>
         <li><a href="#commit-date-filter">&nbsp; &nbsp; CommitDate</a></li>
+        <li><a href="#commit-id-filter">&nbsp; &nbsp; CommitId</a></li>
         <li><a href="#new-object-filter">&nbsp; &nbsp; NewObject changes</a></li>
 
         <li><a href="#entity-refactoring">Refactoring Entities with @TypeName</a></li>
