--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -75,6 +75,7 @@
         <li class="nested"><a href="#skip-filter">Skip</a></li>
         <li class="nested"><a href="#commit-date-filter">CommitDate</a></li>
         <li class="nested"><a href="#commit-id-filter">CommitId</a></li>
+        <li class="nested"><a href="#version-filter">Snapshot version</a></li>
         <li class="nested"><a href="#new-object-filter">NewObject changes</a></li>
 
         <li><a href="#entity-refactoring">Refactoring Entities with @TypeName</a></li>
