--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -44,6 +44,7 @@
         <li><a href="#compare-valueobjects">Compare Value Objects</a></li>
         <li><a href="#compare-graphs">Compare graphs</a></li>
         <li><a href="#compare-collections">Compare top-level collections</a></li>
+        <li><a href="#groovy-diff-example">Groovy diff example</a></li>
     </ul>
 </section>
 
@@ -93,10 +94,10 @@
         <li class="nested"><a href="#value-object">Value Object</a></li>
         <li class="nested"><a href="#ValueType">Value</a></li>
         <li><a href="#mapping-configuration">Mapping configuration</a></li>
-        <li class="nested"><a href="#supported-annotations">Supported annotations</a></li>
-        <li class="nested"><a href="#entity-id-property">Entity Id</a></li>
-        <li class="nested"><a href="#property-mapping-style">Property mapping style</a></li>
-        <li class="nested"><a href="#ignoring-things">Ignoring things</a></li>
+        <li><a href="#supported-annotations">Supported annotations</a></li>
+        <li><a href="#entity-id-property">Entity Id</a></li>
+        <li><a href="#property-mapping-style">Property mapping style</a></li>
+        <li><a href="#ignoring-things">Ignoring things</a></li>
         <li><a href="#hooks">Object hooks</a></li>
     </ul>
 </section>
@@ -150,12 +151,4 @@
         <li><a href="#starter-demo-app">Demo application</a></li>
     </ul>
 
-</section>
-
-<section>
-    <a {% if currentSubPage == 'javers-internals' %}class='active'{% endif %}
-    href="/documentation/javers-internals">JaVers internals</a>
-    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'javers-internals' %} hidden {% endif %}">
-        <li><a href="#type-mapper">TypeMapper</a></li>
-    </ul>
 </section>
