doc sidebar active indicator fix

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -62,7 +62,7 @@
 </section>
 
 <section>
-    <a {% if currentSubPage == jql-examples' %}class='active'{% endif %} href="/documentation/jql-examples">
+    <a {% if currentSubPage == 'jql-examples' %}class='active'{% endif %} href="/documentation/jql-examples">
     Examples &mdash; JQL
     </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'jql-examples' %} hidden {% endif %}">
