JQL any domain query and author filter

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -69,11 +69,13 @@
         <li><a href="#instance-id-query">Querying for Entity</a></li>
         <li><a href="#by-value-object-query">Querying for ValueObject</a></li>
         <li><a href="#by-class-query">Querying by Class</a></li>
+        <li><a href="#any-domain-object-query">Querying for any domain object</a></li>
 
         <li><a href="#query-filters">Query filters</a></li>
         <li class="nested"><a href="#property-filter">Property</a></li>
         <li class="nested"><a href="#limit-filter">Limit</a></li>
         <li class="nested"><a href="#skip-filter">Skip</a></li>
+        <li class="nested"><a href="#author-filter">Author</a></li>
         <li class="nested"><a href="#commit-date-filter">CommitDate</a></li>
         <li class="nested"><a href="#commit-id-filter">CommitId</a></li>
         <li class="nested"><a href="#version-filter">Snapshot version</a></li>
