JQL commit property filter

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -76,6 +76,7 @@
         <li class="nested"><a href="#limit-filter">Limit</a></li>
         <li class="nested"><a href="#skip-filter">Skip</a></li>
         <li class="nested"><a href="#author-filter">Author</a></li>
+        <li class="nested"><a href="#commit-property-filter">CommitProperty</a></li>
         <li class="nested"><a href="#commit-date-filter">CommitDate</a></li>
         <li class="nested"><a href="#commit-id-filter">CommitId</a></li>
         <li class="nested"><a href="#version-filter">Snapshot version</a></li>
