--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -72,13 +72,17 @@
         <li><a href="#any-domain-object-query">Querying for any domain object</a></li>
 
         <li><a href="#query-filters">Query filters</a></li>
-        <li class="nested"><a href="#property-filter">Property</a></li>
-        <li class="nested"><a href="#limit-filter">Limit</a></li>
-        <li class="nested"><a href="#skip-filter">Skip</a></li>
-        <li class="nested"><a href="#author-filter">Author</a></li>
-        <li class="nested"><a href="#commit-property-filter">CommitProperty</a></li>
-        <li class="nested"><a href="#commit-date-filter">CommitDate</a></li>
-        <li class="nested"><a href="#commit-id-filter">CommitId</a></li>
+        <li class="nested"><a href="#property-filter">Changed Property</a></li>
+        <li class="nested">
+            <a href="#limit-filter">Limit</a>,
+            <a href="#skip-filter">Skip</a>
+        </li>
+        <li class="nested">
+            <a href="#author-filter">Commit: Author</a>,
+            <a href="#commit-property-filter">Property</a>,
+            <a href="#commit-date-filter">Date</a>,
+            <a href="#commit-id-filter">Id</a>
+        </li>
         <li class="nested"><a href="#version-filter">Snapshot version</a></li>
         <li class="nested"><a href="#new-object-filter">NewObject changes</a></li>
 
