--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="/">
                 <img alt="JaVers logo" src="/img/logotype.svg"/>
             </a>
-            <a class="logo-version" href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar" >
+            <a class="logo-version" href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|" >
                 {{site.javers_current_version}}
             </a>
         </div>
