--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -89,7 +89,7 @@
             <a href="#commit-id-filter">Id</a>
         </li>
         <li class="nested"><a href="#version-filter">Snapshot version</a></li>
-        <li class="nested"><a href="#aggregate-filter">Aggregate</a></li>
+        <li class="nested"><a href="#child-value-objects-filter">ChildValueObjects</a></li>
         <li class="nested"><a href="#new-object-filter">NewObject changes</a></li>
 
         <li><a href="#entity-refactoring">Refactoring Entities with @TypeName</a></li>
