--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -147,7 +147,7 @@
 
         <li class="nested">beans:
             <a href="#javers-instance-as-a-bean">JaVers</a>,
-            <a href="#javers-auditable-repository-aspect">JaversAuditableRepository,</a>
+            <a href="#javers-auto-audit-aspects">Aspect beans,</a>
             <a href="#author-provider-bean">AuthorProvider</a>,
             <a href="#commit-properties-provider-bean">CommitPropertiesProvider</a>
         </li>
