--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -161,7 +161,7 @@
         <li><a href="#spring-configuration-for-transactional-javers">&nbsp; &nbsp;Spring configuration for SQL</a></li>
         <li><a href="#hibernate-unproxy-hook">&nbsp; &nbsp;Hibernate unproxy hook</a></li>
 
-        <li><a href="#spring-jpa-example">Configuration for JPA & Hibernate</a></li>
+        <li><a href="#spring-jpa-example">Configuration example for JPA</a></li>
         <li><a href="#auto-audit-example-mongo">Configuration example for MongoDB</a></li>
     </ul>
 </section>
