--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,15 +20,14 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li {% if page.url == '/documentation/features/' %}class='active'{% endif %}>
-                    <a href="/documentation/features">Features</a>
+                <li {% if page.url contains '/features/' %}class='active'{% endif %}>
+                    <a href="/features/features">Features</a>
                 </li>
 
-                <li {% if page.url == '/documentation/' %}class='active'{% endif %}>
-                    <a href="/documentation">Documentation</a>
-                    <ul class="visible-xs">
-                        <li><a href="/documentation/">Overview</a></li>
-                        <li><a href="/documentation/features">Features</a></li>
+                <li class="dropdown {% if page.url contains '/documentation/' %}active{% endif %}">
+                    <a class="dropdown-toggle" data-toggle="dropdown">Documentation <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/documentation/overview">Overview</a></li>
                         <li><a href="/documentation/getting-started">Getting Started</a></li>
                         <li><a href="/documentation/diff-examples">Examples &mdash; Diff</a></li>
                         <li><a href="/documentation/repository-examples">Examples &mdash; Repository</a></li>
@@ -38,12 +37,11 @@
                         <li><a href="/documentation/diff-configuration">Configuration &mdash; Diff</a></li>
                         <li><a href="/documentation/spring-integration">Spring integration</a></li>
                         <li><a href="/documentation/spring-boot-integration">Spring Boot integration</a></li>
-                        <li><a href="/documentation/javers-internals">JaVers internals</a></li>
                     </ul>
                 </li>
 
-                <li {% if page.url == '/documentation/features/#release-notes/' %}class='active'{% endif %}>
-                    <a href="/documentation/features/#release-notes">Release notes</a>
+                <li {% if page.url contains '/release-notes/' %}class='active'{% endif %}>
+                    <a href="/release-notes/release-notes">Release notes</a>
                 </li>
 
                 <li><a href="{{site.javadoc_url}}index.html">Javadoc</a></li>
