--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -3,7 +3,7 @@
 
 
 <section>
-    <a {% if currentSubPage == 'overview' %}class='active'{% endif %} href="/documentation/overview" >
+    <a {% if currentSubPage == 'index.html' %}class='active'{% endif %} href="/documentation" >
         Overview
         </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'introduction' %} hidden {% endif %}">
@@ -11,6 +11,17 @@
         <li><a href="#story">Story</a></li>
         <li><a href="#basic-facts-about-javers">Basic facts about JaVers</a></li>
         <li><a href="#licence">Licence</a></li>
+    </ul>
+</section>
+
+<section>
+    <a {% if currentSubPage == 'features' %}class='active'{% endif %} href="/documentation/features">
+            Features</a>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features' %} hidden {% endif %}">
+        <li><a href="#object-diff">Object diff</a></li>
+        <li><a href="#javers-repository">Javers Repository</a></li>
+        <li><a href="#json-serialization">JSON Serialization</a></li>
+        <li><a href="#release-notes">Release notes</a></li>
     </ul>
 </section>
 
