--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,7 +4,7 @@
     {% include head.html %}
 </head>
 <body>
-{% include navbar.html %}
+{% include menus.html %}
 {{ content }}
 {% include footer.html %}
 </body>
