--- a/_includes/features-sidebar.html
+++ b/_includes/features-sidebar.html
@@ -3,7 +3,7 @@
 
 
 <section>
-  <a {% if currentSubPage == 'features' %}class='active'{% endif %} href="/features/features">
+  <a {% if currentSubPage == 'features' %}class='active'{% endif %} href="/features">
   Features overview</a>
   <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features' %} hidden {% endif %}">
     <li><a href="#object-diff">Object diff</a></li>
