--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
         <div id="navbar" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
                 <li {% if page.url contains '/features/' %}class='active'{% endif %}>
-                    <a href="/features/features">Features</a>
+                    <a href="/features">Features</a>
                 </li>
 
                 <li class="dropdown {% if page.url contains '/documentation/' %}active{% endif %}">
@@ -41,7 +41,7 @@
                 </li>
 
                 <li {% if page.url contains '/release-notes/' %}class='active'{% endif %}>
-                    <a href="/release-notes/release-notes">Release notes</a>
+                    <a href="/release-notes">Release notes</a>
                 </li>
 
                 <li><a href="{{site.javadoc_url}}index.html">Javadoc</a></li>
