url fixing /documentation

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -3,7 +3,7 @@
 
 
 <section>
-    <a {% if currentSubPage == 'overview' %}class='active'{% endif %} href="/documentation/overview" >
+    <a {% if currentSubPage == 'overview' %}class='active'{% endif %} href="/documentation/" >
         Overview
         </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'introduction' %} hidden {% endif %}">
