--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,7 +27,7 @@
                 <li class="dropdown {% if page.url contains '/documentation/' %}active{% endif %}">
                     <a class="dropdown-toggle" data-toggle="dropdown">Documentation <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/documentation">Overview</a></li>
+                        <li><a href="/documentation/">Overview</a></li>
                         <li><a href="/documentation/getting-started">Getting Started</a></li>
                         <li><a href="/documentation/diff-examples">Examples &mdash; Diff</a></li>
                         <li><a href="/documentation/repository-examples">Examples &mdash; Repository</a></li>
