--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -3,9 +3,9 @@
 
 
 <section>
-    <a {% if currentSubPage == 'overview' %}class='active'{% endif %} href="/documentation/" >
+    <a {% if currentSubPage == 'index.html' %}class='active'{% endif %} href="/documentation/" >
         Overview
-        </a>
+    </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'introduction' %} hidden {% endif %}">
         <li><a href="#what-is-javers">What is JaVers</a></li>
         <li><a href="#story">Story</a></li>
