--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,7 +25,7 @@
                 </li>
 
                 <li class="dropdown {% if page.url contains '/documentation/' %}active{% endif %}">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Documentation <span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button">Documentation <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/documentation/">Overview</a></li>
                         <li><a href="/documentation/getting-started">Getting Started</a></li>
