--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,12 @@ code {
     color: #111;
     font-size: 0.95em;
     white-space: pre-wrap;
-    word-wrap: normal;
+    word-wrap: break-word;
     overflow: auto;
 }
 
 pre code {
+    word-wrap: normal;
     font-size: 12px;
 }
 
