--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -44,6 +44,8 @@
                     <a href="/release-notes">Release notes</a>
                 </li>
 
+                <li><a href="/donate">Donate</a></li>
+
                 <li><a href="{{site.javadoc_url}}index.html">Javadoc</a></li>
             </ul>
         </div>
