--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
                 <img alt="JaVers logo" src="/img/logotype.svg"/>
             </a>
             <a class="logo-version" href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|" >
-                {{site.javers_current_version}} <span class="hidden-xs">&mdash; Java 8 release</span>
+                {{site.javers_current_version}}
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
