--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -57,7 +57,14 @@
     Examples &mdash; JQL
     </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'jql-examples' %} hidden {% endif %}">
-        <li><a href="#query-overview">Querying for:</a></li>
+        <li><a href="#find-methods">Find methods:</a></li>
+        <li class="nested">
+            <a href="#query-for-changes">Changes</a>,
+            <a href="#query-for-shadows">Shadows</a>,
+            <a href="#query-for-snapshots">Snapshots</a>
+        </li>
+
+        <li><a href="#query-types">Query types:</a></li>
         <li class="nested">
             <a href="#instance-id-query">Entity</a>,
             <a href="#by-value-object-query">ValueObject</a>,
@@ -66,8 +73,8 @@
         </li>
 
         <li><a href="#query-filters">Query filters:</a></li>
-        <li class="nested"><a href="#property-filter">Changed Property</a></li>
         <li class="nested">
+            <a href="#property-filter">Changed Property</a>,
             <a href="#limit-filter">Limit</a>,
             <a href="#skip-filter">Skip</a>
         </li>
