--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ body.page section #content #main blockquote {
 }
 
 #sidebar > div {
-    margin-top: 20px;
+    margin-top: 10px;
     border-left: 1px solid #dde0e2;
 }
 
@@ -370,7 +370,8 @@ body.page section #sidebar section {
 }
 
 body.page section #sidebar section a {
-    font-size: 1.5em;
+    font-size: 1.4em;
+    line-height: 1.4em;
     font-weight: 300;
     color: #3d79b4;
     padding-left: 15px;
