--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,13 @@ pre code {
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: black;
+}
+.navbar-inverse .navbar-toggle {
+    margin-top:12px;
+}
+
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a {
     background: transparent;
