--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 {% assign current = page.url | downcase | split: '/' %}
 
-<nav class="navbar navbar-inverse navbar-fixed-top navbar-javers" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top navbar-javers">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="/">
                 <img alt="JaVers logo" src="/img/logotype.svg"/>
             </a>
-            <a class="logo-version" href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|" >
+            <a class="logo-version" href="https://search.maven.org/#artifactdetails%7Corg.javers%7Cjavers-core%7C{{site.javers_current_version}}%7C" >
                 {{site.javers_current_version}}
             </a>
         </div>
