--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <p class="col-md-12">
-                <img alt="JaVers logo small" src="/img/logotype.svg"/><br/>
+                <img alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/><br/>
             </p>
         </div>
     </div>
