--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,13 +11,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-<link href="/css/style.css" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet'
-      type='text/css'>
+<link href="/css/style.css?timestamp={{ site.time | date: '%s' }}" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 <!-- github style syntax highlight -->
-<link href="/css/github_pygments.css" rel="stylesheet">
-<link href="/css/octicons.css" rel="stylesheet">
+<link href="/css/github_pygments.css?timestamp={{ site.time | date: '%s' }}" rel="stylesheet">
+<link href="/css/octicons.css?timestamp={{ site.time | date: '%s' }}" rel="stylesheet">
 
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
