--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img alt="JaVers logo" src="/img/logotype.svg"/>
+                <img alt="JaVers logo" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
             </a>
             <a class="logo-version" href="https://search.maven.org/#artifactdetails%7Corg.javers%7Cjavers-core%7C{{site.javers_current_version}}%7C" >
                 {{site.javers_current_version}}
