--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -44,8 +44,8 @@
                     <a href="/release-notes">Release notes</a>
                 </li>
 
-                <li {% if page.url contains '/donate/' %}class='active'{% endif %}>
-                    <a href="/donate">Donate</a>
+                <li {% if page.url contains '/support' %}class='active'{% endif %}>
+                    <a href="/support">Support</a>
                 </li>
 
                 <li><a href="{{site.javadoc_url}}index.html">Javadoc</a></li>
