--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="{{ page.description }}">
+<meta name="description" content="{{page.title}}{{titleSuffix}}">
 <meta name="author" content="">
-<title>{{ page.title }}{{titleSuffix}}</title>
+<title>{{page.title}}{{titleSuffix}}</title>
 <link rel="icon" href="favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
