--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 <meta name="twitter:site" content="@javers_org" />
 <meta property="og:url" content="https://javers.org/" />
 <meta property="og:title" content="{{ page.title }}{{ titleSuffix }}" />
-<meta property="og:description" content="{{ page.description }}" />
+<meta property="og:description" content="{{ page.title }}{{ titleSuffix }}" />
 <meta property="og:image" content="https://javers.org/img/javers-og-image.png" />
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
