--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,7 +20,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li {% if page.url contains '/features/' %}class='active'{% endif %}>
+                <li {% if page.url contains '/features' %}class='active'{% endif %}>
                     <a href="/features">Features</a>
                 </li>
 
@@ -40,7 +40,7 @@
                     </ul>
                 </li>
 
-                <li {% if page.url contains '/release-notes/' %}class='active'{% endif %}>
+                <li {% if page.url contains '/release-notes' %}class='active'{% endif %}>
                     <a href="/release-notes">Release notes</a>
                 </li>
 
