https://github.com/javers/javers.github.io/issues/89 description =  site.description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="{{page.title}}">
+<meta name="description" content="{{ site.description }}">
 <meta name="author" content="">
 <title>{{page.title}}{{titleSuffix}}</title>
 <link rel="icon" href="favicon.ico">
@@ -12,7 +12,7 @@
 <meta name="twitter:site" content="@javers_org" />
 <meta property="og:url" content="https://javers.org/" />
 <meta property="og:title" content="{{ page.title }}{{ titleSuffix }}" />
-<meta property="og:description" content="{{ page.title }}" />
+<meta property="og:description" content="{{ site.description }}" />
 <meta property="og:image" content="https://javers.org/img/javers-og-image.png" />
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
