--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,13 +16,13 @@
 
                 <div itemprop="author" itemscope itemtype="http://schema.org/Person">
                     <meta itemprop="name" content="Bartosz Walacik"/>
-                    <meta itemprop="email" content="bartek@javers.org"/>
+                    <meta itemprop="email" content="support@javers.org"/>
                 </div>
 
-                <h1 itemprop="headline">{{ page.title }}</h1>
+                <h1 itemprop="headline">{{ page.title }}{{ titleSuffix }}</h1>
 
                 <div itemprop="articleBody">
-                {{ content }}
+                    {{ content }}
                 </div>
 
             </div>
