--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% capture titleSuffix %} — {{page.category}}{% endcapture %}
+    {% capture titleSuffix %} — JaVers {{page.category}}{% endcapture %}
     {% include head.html %}
 </head>
 <body class="page" data-spy="scroll" data-target="#sidebar">
@@ -19,7 +19,7 @@
                     <meta itemprop="email" content="support@javers.org"/>
                 </div>
 
-                <h1 itemprop="headline">{{ page.title }}{{ titleSuffix }}</h1>
+                <h1 itemprop="headline">{{ page.title }}</h1>
 
                 <div itemprop="articleBody">
                     {{ content }}
