--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,7 @@
                 <meta itemprop="image" content="{{ site.url }}/img/logotype.png">
 
                 <div itemprop="author" itemscope itemtype="http://schema.org/Person">
-                    <meta itemprop="name" content="Bartosz Walacik"/>
+                    <meta itemprop="name" content="javers.org — Bartosz Walacik"/>
                     <meta itemprop="email" content="support@javers.org"/>
                 </div>
 
