schema org - author

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,10 +14,7 @@
                 <meta itemprop="datePublished" content="2015-08-27T00:00:00+00:00"/>
                 <meta itemprop="image" content="{{ site.url }}/img/logotype.png">
 
-                <div itemprop="author" itemscope itemtype="http://schema.org/Person">
-                    <meta itemprop="name" content="javers.org — Bartosz Walacik"/>
-                    <meta itemprop="email" content="support@javers.org"/>
-                </div>
+                <link itemprop="author" href="javers.org — Bartosz Walacik" />
 
                 <h1 itemprop="headline">{{ page.title }}</h1>
 
