schema org - author

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,8 +13,7 @@
             <div id="main" class="col-md-8" itemscope itemtype="http://schema.org/TechArticle">
                 <meta itemprop="datePublished" content="2015-08-27T00:00:00+00:00"/>
                 <meta itemprop="image" content="{{ site.url }}/img/logotype.png">
-
-                <link itemprop="author" href="javers.org — Bartosz Walacik" />
+                <meta itemprop="author" content="javers.org — Bartosz Walacik" />
 
                 <h1 itemprop="headline">{{ page.title }}</h1>
 
