--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,14 @@
             <div id="main" class="col-md-8" itemscope itemtype="http://schema.org/TechArticle">
                 <meta itemprop="datePublished" content="2015-08-27T00:00:00+00:00"/>
                 <meta itemprop="image" content="{{ site.url }}/img/logotype.png">
-                <meta itemprop="author" content="javers.org — Bartosz Walacik" />
+
+                <div itemprop="author" itemscope itemtype="https://schema.org/Person">
+                    <meta itemprop="name" content="Bartosz Walacik">
+                </div>
+
+                <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
+                    <meta itemprop="name" content="javers.org">
+                </div>
 
                 <h1 itemprop="headline">{{ page.title }}</h1>
 
