--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,7 @@ body.page section #content #main h4 {
     font-size: 1em;
     font-weight: bold;
     margin-bottom: 5px;
+    margin-top: 15px;
 }
 
 body.page section #content #main h5 {
